# portable-jukebox

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  tailwind.input.css
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 3909d9d0a55d_initial_schema.py
src/: activity.py  auth.py  database.py  downloader.py  main.py  models.py  scheduler.py
src/routers/: admin.py  user.py
src/templates/: admin_base.html  base.html  change_password.html  dashboard.html  login.html
src/templates/admin/: logs.html  settings.html  users.html
src/templates/partials/: history_list.html  progress.html
tests/: conftest.py  test_auth.py  test_downloader.py  test_scheduler.py
