[project]
name = "portable-jukebox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.2",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
